--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "react-icons": "^4.7.1",
+    "react-type-animation": "^2.1.2",
     "tailwindcss": "^3.2.4"
   }
 }
