--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "react-countup": "^6.4.0",
     "react-icons": "^4.7.1",
     "react-scroll": "^1.8.9",
     "react-type-animation": "^2.1.2",
