--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "react-countup": "^6.4.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.1",
     "react-scroll": "^1.8.9",
     "react-type-animation": "^2.1.2",
     "tailwindcss": "^3.2.4"
